Redactiond de l'introduction Fixes #1

--- a/resume.tex
+++ b/resume.tex
@@ -4,8 +4,13 @@
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{pdfpages}
-
-
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+\setlength{\hoffset}{0pt}
+\setlength{\oddsidemargin}{0pt}
+\setlength{\evensidemargin}{0pt}
+\setlength{\textwidth}{450pt}
+\setlength{\textheight}{650pt} 
 \begin{document}
 
 
